@@ -1,3 +1,10 @@
+2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 02656]
+	* XMakefile (clean): remove functable.c
+	* anchor.c (_put_anchor_new): use Strnew_size() and Strcat_charp_n()
+	* indep.c (getescapechar): use GET_MYCDIGIT
+
 2001-12-13  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02541] mouse support on cygwin
@@ -1225,4 +1232,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.125 2001/12/12 17:04:20 ukai Exp $
+$Id: ChangeLog,v 1.126 2001/12/14 17:10:54 ukai Exp $
